--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,8 @@ nav {
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+#contact-container {
+  display: flex;
+  flex-direction: column;
+}
