--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,15 @@ nav {
   display: flex;
   flex-direction: column;
 }
+
+#preview-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
