--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,21 @@ img {
 }
 
 body {
-  background-color: grey;
+  background-color: #002500;
   justify-content: center;
+  color: #EDCBB1;
 }
 
 nav {
-  padding-bottom: 1rem;
+  padding: 1rem;
   border-bottom: 2px solid black;
-  margin-top: 16px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  background-color: #5171A5;
+  margin-top: 0;
+  height: 2rem;
+  align-items: center;
 }
 
 #home-div {
@@ -23,6 +27,14 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+#home-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -49,11 +61,11 @@ section {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #EDCBB1;
 }
 
 a:hover {
-  color: white;
+  color: red;
 }
 
 .about {
@@ -78,7 +90,14 @@ a:hover {
   margin: 4%;
 }
 
-
 .project p {
   margin: 5%;
+}
+
+.text-container {
+  width: 50%;
+}
+
+.text-container p {
+  text-align: center;
 }
